# 2D-Irregular-Cutting-Stock-Algorithm

./: CMakeLists.txt  CMakePresets.json
